# qrcodemicroservice

./: Cargo.toml
libary/: Cargo.toml
src/: main.rs
